# GPGC

./: CMakeLists.txt  README.md  info.txt  questions.txt
include/: Configuration.hpp  Managed.hpp  MemoryManager.hpp  Ptr.hpp
src/: Configuration.cpp  Managed.cpp  MemoryManager.cpp
